# counter-strike-skin-generator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  manage.py  pyproject.toml
counter-strike-scrapers/: README.md  manage.py
counter-strike-scrapers/cs-stash/db/: cs-stash.db  queries.py
counter-strike-scrapers/cs-stash/scripts/: extract_skin_images.py
counter-strike-skin-classifiers/: .gitattributes
counter-strike-skin-classifiers/data_preparation/: generate_dataset_datasets.py  prepare_data.py  prepare_datasets.py  tests.py
counter-strike-skin-classifiers/data_preparation/datasets/: dataset_prices.pkl  dataset_qualities.pkl  skins_no_images_cleaned.csv  skins_no_images_no_missing_prices.csv  skins_no_images_no_missing_prices_with_bins.csv  skins_no_images_raw.csv
cs-stash/: main.py
cs-stash/db/: cs-stash.db  queries.py  schema.py  session.py
cs-stash/scraper/: scrape.py
cs-stash/utils/: utils.py
