[tool.poetry]
name = "counter-strike-skin-generator"
version = "0.1.0"
description = ""
authors = ["Stelios Bitzas <stelios.bitzas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.2"
playwright = "^1.42.0"
flask = "^3.0.2"
requests = "^2.31.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"
sqlalchemy-utils = "^0.41.2"
torch = "^2.2.2"
datasets = "^2.18.0"
keras = "^3.2.1"
tensorflow = "^2.16.1"
transformers = "^4.39.3"
numpy = "^1.26.4"
pandas = "^2.2.2"
pillow = "^10.3.0"
pytest = "^8.1.1"
huggingface-hub = "^0.22.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
